<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.Lohia.investment.Add_Policy_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:padding="@dimen/_3sdp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_name"
            android:text="Prashant Seth"
            android:gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center"
                android:id="@+id/title_dob"
                android:layout_height="wrap_content"
                android:text="12/02/2003"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center"
                android:id="@+id/title_number"
                android:layout_height="wrap_content"
                android:text="9898989898"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <Button
            android:id="@+id/Add_policy_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:textSize="24sp"
            android:background="@drawable/snapeloginblue"
            android:text="@string/add_policy" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/child_user_card"
        android:layout_marginBottom="?attr/actionBarSize"/>



</LinearLayout>