<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="#f7f7f7"
    tools:context="com.Lohia.investment.otpfill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src= "@drawable/logo1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/otp_verification"
            android:textColor="#000000"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:textColor="@color/black"
            android:textSize = "@dimen/_14sdp"/>

        <TextView
            android:id="@+id/textmobileshownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart= "@dimen/_50sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"/>

// ##################################

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:id="@+id/inputotp1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

            <EditText
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:id="@+id/inputotp2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

            <EditText
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:id="@+id/inputotp3"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />


            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            <EditText
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:id="@+id/inputotp5"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shapemob"
                android:id="@+id/inputotp6"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity = "center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/didn_t_receive_the_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                />

            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="RESEND OTP AGAIN"
                android:layout_marginLeft="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signin"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center"
                android:background="@drawable/shapelogin"
                android:padding="@dimen/_10sdp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/sign_in"
                android:textColor="@color/white" />


            <ProgressBar
                android:id = "@+id/progressbarsignin_otp"
                android:layout_width = "@dimen/_35sdp"
                android:layout_height = "@dimen/_35sdp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
<!--        <Button-->
<!--            android:id="@+id/signin"-->
<!--            android:layout_width="@dimen/_90sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="@dimen/_10sdp"-->
<!--            android:layout_marginTop="@dimen/_15sdp"-->
<!--            android:layout_marginRight="@dimen/_10sdp"-->
<!--            android:layout_marginBottom="@dimen/_10sdp"-->
<!--            android:background="@drawable/shapelogin"-->
<!--            android:padding="@dimen/_10sdp"-->
<!--            android:shadowColor="@android:color/transparent"-->
<!--            android:text="SIGN IN"-->
<!--            android:textColor="@color/white" />-->

        </LinearLayout>

</ScrollView>